--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Under Direction of Prof. Mike Stilman
 NAME:              Email Address:
 ---------------------------------
 Pete Vieira       <pete.vieira@gatech.edu>
+Xin Yan           <voidpointeryan@gmail.com>
