--- a/README
+++ b/README
@@ -40,15 +40,29 @@ INSTALLATION
 
       `make`
 
-USAGE
+USAGE (Single computer)
 =====
 1. create an ach channel called 'liberty' ("-o 666" gives permissions)
 
     `ach -C liberty -o 666`
 
-2. run the libertyd executable
+2. run the libertyd executable on the main computer
 
     `./libertyd`
+
+
+USAGE (From main computer to remote computer)
+=====
+1. create an ach channel on both computers called 'liberty' ("-o 666" gives sudo permissions)
+
+    `ach -C liberty -o 666`
+
+2. run the libertyd executable on the main computer
+
+    `./libertyd`
+
+3. push the data from the liberty channel to the remote computer using "achd" and the ip address of remote computer
+    `sudo achd -r push 192.168.1.1 liberty'
 
 QUIRKS
 ======
